welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:7: error: illegal start of simple expression
		if (c != i);
                           ^